ECL 10.4.2:
===========

* Bugs fixed:

 - Several autoconf tests in src/aclocal.in did not work when cross compiling.

 - ECL defines the feature LONG-LONG when this type is available in the
   C compiler.

 - When LIST, LIST*, and some other functions appeared as toplevel forms, the
   interpreter compiled its arguments also as toplevel forms, causing their
   execution in the wrong order.

* Visible changes:

 - "fasb" is now a valid FASL file type, accepted by ECL even in absence of
   ASDF.

 - EXT:GC ignores any argument passed to it.

 - ECL's compiler now understands the unboxed type :long-long.

 - A new special form, EXT:WITH-BACKEND allows us to select the code depending
   on whether it is going to be processed by the interpreter or by the C
   compiler.
      (defun example ()
        (ext:with-backend
          :bytecodes (print 3)
          :c/c++ (print 2)))
   The two currently available backends are :bytecodes and :c/c++.


ECL 10.4.1:
===========

* Bugs fixed:

 - Fixed offset problems in READ/WRITE-SEQUENCE.

 - In multithreaded ECL, the signal servicing thread was not created due to
   a stale debug statement.

 - The tool 'ecl-config' contained unsubstituted values, such as @LDRPATH@
   because these variablesls had been renamed in the autoconf file.

 - The reimplementation of DIRECTORY introduced a bug in pathnames with ending
   double wildcars, such as "/foo/**/".

 - EXT:SAFE-EVAL (or cl_safe_eval in C) would attempt to start the debugger
   when an error was signaled.

 - The logical hostname EXT: did not have a pathname translation relative to
   that of SRC:

 - After loading the compiler, the COMMON-LISP package was left unlocked
   against changes.

 - ECL can build again itself using a C++ compiler (--with-cxx thus works).

 - ecl_make_file_stream_from_fd() did not set the right mode in the stream
   structure.

 - ECL did not understand type declarations that involved symbol macros.
